--- a/TicketToRide/app/src/main/res/values/colors.xml
+++ b/TicketToRide/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="lightGray">#E0E0E0</color>
+    <color name="menuOne">#EE0000</color>
+    <color name="menuTwo">#00EE00</color>
+    <color name="menuThree">#0000EE</color>
 </resources>
