--- a/TicketToRide/app/src/main/res/layout/activity_game_list.xml
+++ b/TicketToRide/app/src/main/res/layout/activity_game_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.GameListActivity">
+    tools:context="activity.GameListActivity">
     <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
