--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login"
-            android:id="@+id/loginButton"/>
+            android:id="@+id/loginButton"
+            android:enabled="false"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -73,7 +74,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/registerButton"
-            android:text="@string/register"/>
+            android:text="@string/register"
+            android:enabled="false"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
