--- a/app/src/main/res/layout/item_game_list.xml
+++ b/app/src/main/res/layout/item_game_list.xml
@@ -28,7 +28,7 @@
         app:layout_constraintStart_toEndOf="@id/guideLeft"
         app:layout_constraintEnd_toStartOf="@id/guideRight"/>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/itemNum"
         app:layout_constraintStart_toEndOf="@id/guideRight"
