Added ability to change server parameters
Now the LoginActivity has fields for hostIP and hostPort. If those
fields are left blank, they will default to "localhost" and "8080",
respectively.

I also added a SharedPreferences object that will save your login info
from session to session. This won't be very useful until we implement the
database, but I figured it wouldn't hurt to put it in early.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,26 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/registerLayout">
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/hostIP"
+            android:inputType="text"
+            android:hint="@string/host_ip"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/hostPort"
+            android:inputType="number"
+            android:hint="@string/host_port"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/loginLayout"
         app:layout_constraintBottom_toTopOf="@id/bottomGuide"
