--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -95,6 +95,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/gameList"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/topBarGuide"
         app:layout_constraintBottom_toTopOf="@id/bottomGuide"
         app:layout_constraintStart_toEndOf="@id/leftGuide"
