we are now colorblind

--- a/app/src/main/res/layout/activity_game_lobby.xml
+++ b/app/src/main/res/layout/activity_game_lobby.xml
@@ -19,10 +19,10 @@
         app:layout_constraintTop_toBottomOf="@id/playerList"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/colorSpinner"/>
+        <!--<Spinner-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/colorSpinner"/>-->
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
