--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -10,19 +10,19 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:id="@+id/leftGuide"
-        app:layout_constraintGuide_percent=".25"/>
+        app:layout_constraintGuide_percent=".05"/>
     <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         android:id="@+id/rightGuide"
-        app:layout_constraintGuide_percent=".75"/>
+        app:layout_constraintGuide_percent=".95"/>
     <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:id="@+id/topGuide"
-        app:layout_constraintGuide_percent=".25"/>
+        app:layout_constraintGuide_percent=".15"/>
     <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -34,19 +34,19 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:id="@+id/topBarGuide"
-        app:layout_constraintGuide_percent=".3"/>
+        app:layout_constraintGuide_percent=".225"/>
     <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         android:id="@+id/menuOne"
-        app:layout_constraintGuide_percent=".35"/>
+        app:layout_constraintGuide_percent=".25"/>
     <android.support.constraint.Guideline
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         android:id="@+id/menuTwo"
-        app:layout_constraintGuide_percent=".65"/>
+        app:layout_constraintGuide_percent=".8"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -69,6 +69,7 @@
         android:layout_height="0dp"
         android:background="@color/menuOne"
         android:text="@string/game_name"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/topGuide"
         app:layout_constraintBottom_toTopOf="@id/topBarGuide"
         app:layout_constraintEnd_toStartOf="@id/menuOne"
@@ -77,6 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/menuTwo"
+        android:textAlignment="center"
         android:text="@string/game_players"
         app:layout_constraintTop_toBottomOf="@id/topGuide"
         app:layout_constraintBottom_toTopOf="@id/topBarGuide"
@@ -87,6 +89,7 @@
         android:layout_height="0dp"
         android:background="@color/menuThree"
         android:text="@string/spots_left"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/topGuide"
         app:layout_constraintBottom_toTopOf="@id/topBarGuide"
         app:layout_constraintEnd_toStartOf="@id/rightGuide"
@@ -106,7 +109,7 @@
         android:id="@+id/gameName"
         android:inputType="text"
         android:hint="@string/game_name"
-        app:layout_constraintEnd_toStartOf="@id/menuOne"
+        app:layout_constraintEnd_toStartOf="@id/numPlayers"
         app:layout_constraintTop_toBottomOf="@id/bottomGuide"
         app:layout_constraintBottom_toBottomOf="parent"/>
     <Spinner
@@ -123,7 +126,7 @@
         android:id="@+id/createGame"
         android:text="@string/create_game"
         android:enabled="false"
-        app:layout_constraintStart_toEndOf="@id/menuTwo"
+        app:layout_constraintStart_toEndOf="@id/numPlayers"
         app:layout_constraintTop_toBottomOf="@id/bottomGuide"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
