--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".7"/>
 
-    <View
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:id="@+id/mapContainer"
