Created card classes and worked on fragments
Created destination cards, train cards, and colors; mostly finished the
client side for choosing a train card

--- a/app/src/main/res/layout/fragment_decks.xml
+++ b/app/src/main/res/layout/fragment_decks.xml
@@ -1,11 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="popup!"
-        android:id="@+id/popup"/>
+
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/firstColumnLeft"
+        app:layout_constraintGuide_percent=".15"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/firstColumnRight"
+        app:layout_constraintGuide_percent=".45"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/secondColumnLeft"
+        app:layout_constraintGuide_percent=".55"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/secondColumnRight"
+        app:layout_constraintGuide_percent=".85"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/firstRowTop"
+        app:layout_constraintGuide_percent=".1"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/firstRowBottom"
+        app:layout_constraintGuide_percent=".25"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/secondRowTop"
+        app:layout_constraintGuide_percent=".3"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/secondRowBottom"
+        app:layout_constraintGuide_percent=".45"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/thirdRowTop"
+        app:layout_constraintGuide_percent=".5"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/thirdRowBottom"
+        app:layout_constraintGuide_percent=".65"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/fourthRowTop"
+        app:layout_constraintGuide_percent=".7"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/fourthRowBottom"
+        app:layout_constraintGuide_percent=".85"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardZero"
+        app:layout_constraintStart_toEndOf="@id/firstColumnLeft"
+        app:layout_constraintEnd_toStartOf="@id/firstColumnRight"
+        app:layout_constraintTop_toBottomOf="@id/firstRowTop"
+        app:layout_constraintBottom_toTopOf="@id/firstRowBottom"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardOne"
+        app:layout_constraintStart_toEndOf="@id/secondColumnLeft"
+        app:layout_constraintEnd_toStartOf="@id/secondColumnRight"
+        app:layout_constraintTop_toBottomOf="@id/firstRowTop"
+        app:layout_constraintBottom_toTopOf="@id/firstRowBottom"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardTwo"
+        app:layout_constraintStart_toEndOf="@id/firstColumnLeft"
+        app:layout_constraintEnd_toStartOf="@id/firstColumnRight"
+        app:layout_constraintTop_toBottomOf="@id/secondRowTop"
+        app:layout_constraintBottom_toTopOf="@id/secondRowBottom"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardThree"
+        app:layout_constraintStart_toEndOf="@id/secondColumnLeft"
+        app:layout_constraintEnd_toStartOf="@id/secondColumnRight"
+        app:layout_constraintTop_toBottomOf="@id/secondRowTop"
+        app:layout_constraintBottom_toTopOf="@id/secondRowBottom"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardFour"
+        app:layout_constraintStart_toEndOf="@id/firstColumnLeft"
+        app:layout_constraintEnd_toStartOf="@id/firstColumnRight"
+        app:layout_constraintTop_toBottomOf="@id/thirdRowTop"
+        app:layout_constraintBottom_toTopOf="@id/thirdRowBottom"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/trainDeck"
+        app:layout_constraintStart_toEndOf="@id/firstColumnLeft"
+        app:layout_constraintEnd_toStartOf="@id/firstColumnRight"
+        app:layout_constraintTop_toBottomOf="@id/fourthRowTop"
+        app:layout_constraintBottom_toTopOf="@id/fourthRowBottom"/>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/destinationDeck"
+        app:layout_constraintStart_toEndOf="@id/secondColumnLeft"
+        app:layout_constraintEnd_toStartOf="@id/secondColumnRight"
+        app:layout_constraintTop_toBottomOf="@id/fourthRowTop"
+        app:layout_constraintBottom_toTopOf="@id/fourthRowBottom"/>
 
 </android.support.constraint.ConstraintLayout>
