--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="menuOne">#EE8000</color>
     <color name="menuTwo">#00EE00</color>
     <color name="menuThree">#00E0EE</color>
+    <color name="trainWhite">#E8E8E8</color>
+    <color name="trainBlack">#080808</color>
+    <color name="trainRed">#E80000</color>
+    <color name="trainOrange">#EE8800</color>
+    <color name="trainYellow">#EEEE00</color>
+    <color name="trainGreen">#00E800</color>
+    <color name="trainBlue">#0000E8</color>
+    <color name="trainPurple">#E000E8</color>
+    <color name="trainGray">#8E8E8E</color>
 </resources>
