--- a/app/src/main/res/layout/fragment_choose_destinations.xml
+++ b/app/src/main/res/layout/fragment_choose_destinations.xml
@@ -41,6 +41,8 @@
         android:id="@+id/selectButton"
         android:enabled="false"
         android:text="Keep These"
-        app:layout_constraintTop_toBottomOf="@id/ticketList"/>
+        app:layout_constraintTop_toBottomOf="@id/ticketList"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
