almost done with PlayerInfoFragment. just have to do the destination cards.

--- a/app/src/main/res/layout/fragment_player_info.xml
+++ b/app/src/main/res/layout/fragment_player_info.xml
@@ -1,10 +1,288 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnTen"
+        app:layout_constraintGuide_percent=".10"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnFifteen"
+        app:layout_constraintGuide_percent=".15"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnTwenty"
+        app:layout_constraintGuide_percent=".20"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnTwentyFive"
+        app:layout_constraintGuide_percent=".25"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnThirty"
+        app:layout_constraintGuide_percent=".30"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnThirtyFive"
+        app:layout_constraintGuide_percent=".35"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnForty"
+        app:layout_constraintGuide_percent=".40"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnFortyFive"
+        app:layout_constraintGuide_percent=".45"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnFifty"
+        app:layout_constraintGuide_percent=".50"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnFiftyFive"
+        app:layout_constraintGuide_percent=".55"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnSixty"
+        app:layout_constraintGuide_percent=".60"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnSixtyFive"
+        app:layout_constraintGuide_percent=".65"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnSeventy"
+        app:layout_constraintGuide_percent=".70"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnSeventyFive"
+        app:layout_constraintGuide_percent=".75"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:id="@+id/columnEighty"
+        app:layout_constraintGuide_percent=".80"/>
+
+
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowFive"
+        app:layout_constraintGuide_percent=".05"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowTen"
+        app:layout_constraintGuide_percent=".1"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowFifteen"
+        app:layout_constraintGuide_percent=".15"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowTwenty"
+        app:layout_constraintGuide_percent=".2"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowTwentyFive"
+        app:layout_constraintGuide_percent=".25"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowThirty"
+        app:layout_constraintGuide_percent=".3"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowThirtyFive"
+        app:layout_constraintGuide_percent=".35"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowForty"
+        app:layout_constraintGuide_percent=".4"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowFortyFive"
+        app:layout_constraintGuide_percent=".45"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowFifty"
+        app:layout_constraintGuide_percent=".5"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowFiftyFive"
+        app:layout_constraintGuide_percent=".55"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowSixty"
+        app:layout_constraintGuide_percent=".60"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowSixtyFive"
+        app:layout_constraintGuide_percent=".65"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowSeventy"
+        app:layout_constraintGuide_percent=".70"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowSeventyFive"
+        app:layout_constraintGuide_percent=".75"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowEighty"
+        app:layout_constraintGuide_percent=".80"/>
+
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="player_info"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardRed"
+        app:layout_constraintStart_toEndOf="@id/columnTen"
+        app:layout_constraintEnd_toStartOf="@id/columnForty"
+        app:layout_constraintTop_toBottomOf="@id/rowFive"
+        app:layout_constraintBottom_toTopOf="@id/rowTwenty">
+
+    </TextView>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardOrange"
+        app:layout_constraintStart_toEndOf="@id/columnFifteen"
+        app:layout_constraintEnd_toStartOf="@id/columnFortyFive"
+        app:layout_constraintTop_toBottomOf="@id/rowTen"
+        app:layout_constraintBottom_toTopOf="@id/rowTwentyFive">
+
+
+    </TextView>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardYellow"
+        app:layout_constraintStart_toEndOf="@id/columnTwenty"
+        app:layout_constraintEnd_toStartOf="@id/columnFifty"
+        app:layout_constraintTop_toBottomOf="@id/rowFifteen"
+        app:layout_constraintBottom_toTopOf="@id/rowThirty">
+
+
+
+    </TextView>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardGreen"
+        app:layout_constraintStart_toEndOf="@id/columnTwentyFive"
+        app:layout_constraintEnd_toStartOf="@id/columnFiftyFive"
+        app:layout_constraintTop_toBottomOf="@id/rowTwenty"
+        app:layout_constraintBottom_toTopOf="@id/rowThirtyFive"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardBlue"
+        app:layout_constraintStart_toEndOf="@id/columnTwentyFive"
+        app:layout_constraintEnd_toStartOf="@id/columnFiftyFive"
+        app:layout_constraintTop_toBottomOf="@id/rowTwenty"
+        app:layout_constraintBottom_toTopOf="@id/rowThirtyFive"/>
+
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardPurple"
+        app:layout_constraintStart_toEndOf="@id/columnThirty"
+        app:layout_constraintEnd_toStartOf="@id/columnSixty"
+        app:layout_constraintTop_toBottomOf="@id/rowTwentyFive"
+        app:layout_constraintBottom_toTopOf="@id/rowForty"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardWhite"
+        app:layout_constraintStart_toEndOf="@id/columnThirtyFive"
+        app:layout_constraintEnd_toStartOf="@id/columnSixtyFive"
+        app:layout_constraintTop_toBottomOf="@id/rowThirty"
+        app:layout_constraintBottom_toTopOf="@id/rowFortyFive"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardBlack"
+        app:layout_constraintStart_toEndOf="@id/columnForty"
+        app:layout_constraintEnd_toStartOf="@id/columnSeventy"
+        app:layout_constraintTop_toBottomOf="@id/rowThirtyFive"
+        app:layout_constraintBottom_toTopOf="@id/rowFifty"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardWild"
+        app:layout_constraintStart_toEndOf="@id/columnFortyFive"
+        app:layout_constraintEnd_toStartOf="@id/columnSeventyFive"
+        app:layout_constraintTop_toBottomOf="@id/rowForty"
+        app:layout_constraintBottom_toTopOf="@id/rowFiftyFive"/>
+
 
 </android.support.constraint.ConstraintLayout>
