--- a/app/src/main/res/layout/fragment_player_info.xml
+++ b/app/src/main/res/layout/fragment_player_info.xml
@@ -191,6 +191,12 @@
         android:orientation="horizontal"
         android:id="@+id/rowEighty"
         app:layout_constraintGuide_percent=".80"/>
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/rowNinety"
+        app:layout_constraintGuide_percent=".90"/>
 
 
     <TextView
@@ -283,6 +289,16 @@
         app:layout_constraintEnd_toStartOf="@id/columnSeventyFive"
         app:layout_constraintTop_toBottomOf="@id/rowForty"
         app:layout_constraintBottom_toTopOf="@id/rowFiftyFive"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/destinationCardList"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/rowSixtyFive"
+        app:layout_constraintBottom_toTopOf="@id/rowNinety"
+        app:layout_constraintStart_toEndOf="@id/columnTwentyFive"
+        app:layout_constraintEnd_toStartOf="@id/columnSeventyFive"/>
 
 
 </android.support.constraint.ConstraintLayout>
