--- a/app/src/main/res/layout/fragment_player_info.xml
+++ b/app/src/main/res/layout/fragment_player_info.xml
@@ -290,15 +290,16 @@
         app:layout_constraintTop_toBottomOf="@id/rowForty"
         app:layout_constraintBottom_toTopOf="@id/rowFiftyFive"/>
 
-    <android.support.v7.widget.RecyclerView
+
+    <ListView
+        android:id="@+id/destinationCardList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/destinationCardList"
-        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/rowSixtyFive"
         app:layout_constraintBottom_toTopOf="@id/rowNinety"
         app:layout_constraintStart_toEndOf="@id/columnTwentyFive"
-        app:layout_constraintEnd_toStartOf="@id/columnSeventyFive"/>
+        app:layout_constraintEnd_toStartOf="@id/columnSeventyFive" />
+
 
 
 </android.support.constraint.ConstraintLayout>
