--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
+    <android.support.constraint.Guideline
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_percent=".8"/>
+
     <EditText
         android:id="@+id/chatEditText"
         android:layout_width="0dp"
@@ -37,8 +44,7 @@
         android:textColor="@color/lightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/chatEditText"
-        app:layout_constraintTop_toBottomOf="@+id/chatRecylcerView" />
+        app:layout_constraintTop_toBottomOf="@id/guideline"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chatRecylcerView"
@@ -49,7 +55,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/black"
-        app:layout_constraintBottom_toTopOf="@+id/sendMessageButton"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
