--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="trainBlue">#0000E8</color>
     <color name="trainPurple">#E000E8</color>
     <color name="trainGray">#8E8E8E</color>
+    <color name="playerBlack">#777777</color>
 </resources>
