--- a/app/src/main/res/layout/destination_card.xml
+++ b/app/src/main/res/layout/destination_card.xml
@@ -3,19 +3,15 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="5dp"
-    android:paddingBottom="5dp"
+    android:paddingLeft="0dp"
+    android:paddingBottom="0dp"
+    android:background="@android:color/holo_blue_bright"
     >
-
-    <ImageView
-        android:id="@+id/image_map"
-        android:layout_width="50dp"
-        android:layout_height="fill_parent" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/city_origin"
