--- a/app/src/main/res/layout/player_info.xml
+++ b/app/src/main/res/layout/player_info.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/player_name"
